--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
+  provider: ^4.0.4
+  pointycastle: ^1.0.2
+  asn1lib: ^0.6.4
 
 # App Packages from pub.dev only for debug mode for both Android & iOS
 dev_dependencies:
