--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   provider: ^4.0.4
   pointycastle: ^1.0.2
   asn1lib: ^0.6.4
+  crypto: ^2.1.4
 
 # App Packages from pub.dev only for debug mode for both Android & iOS
 dev_dependencies:
